--- a/src/components/AgriMartFooter/AgriMartFooter.css
+++ b/src/components/AgriMartFooter/AgriMartFooter.css
@@ -7,5 +7,9 @@
     left: 0;
     width: 100%;
     text-align: left;
-    color: rgb(250, 245, 245);
+    color: rgb(255, 255, 255);
+}
+
+h6{
+    color: white;
 }
