--- a/src/pages/AgriMartFarmerProductManagement/AgriMartFarmerProductManagement.css
+++ b/src/pages/AgriMartFarmerProductManagement/AgriMartFarmerProductManagement.css
@@ -1,4 +1,4 @@
-/* .txt-header{
+.txt-header{
     color: rgb( rgb(13, 14, 13));
    text-align: center;
     padding-top: 100px;
@@ -9,10 +9,12 @@
 
 .button-style{
     padding-top: 50px;
-    padding-left: 50px;
+    padding-bottom: 20px;
+    padding-left: 10px;
 
 }
 
 .table-style{
+    text-align:center;
    
-} */
+} 
