--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -2,15 +2,28 @@
 
 .login_form {
     display: flex;
+    margin-top: -5rem;
     flex-direction: column;
     align-items: left;
     justify-content:center;
+   
     height: 90vh;
     
     font-family: "inter";
     color: rgb(8, 3, 14);
     font-size:17px;
     
+}
+login_form2 {
+    
+   
+   
+    margin-left:39rem;
+    margin-top: -21.5rem;
+    flex-direction: column;
+    align-items: right;
+    justify-content:center;
+    margin-left: 40rem;
 }
 
 
@@ -54,15 +67,16 @@
 }
 .submit_btn {
 
-    padding: 17px 30px;
-    margin-top: 10px;
+    padding: 14px 159px ;
+    margin-top: 6px;
     background: rgba(19, 240, 85, 0.76); 
     color: rgb(29, 2, 2);
     font-size: 20px;
     font-family: "inter";
-    border-radius: 20px;
+    border-radius: 10px;
     font-weight:bold;
-    border: 20px rgba(228, 6, 6, 0.89) rgba (0,0,0,0.24);
+    margin-center: 10rem;
+    border: 10px rgba(228, 6, 6, 0.89) rgba (0,0,0,0.24);
 }
 .regi_btn
 {
