--- a/src/Components/ShopRegistration.css
+++ b/src/Components/ShopRegistration.css
@@ -46,7 +46,7 @@
     outline: none;
     border: 15px rgb(31, 5, 5) rgba (0,0,0,0.24);
     font-family: "inter";
-    border-radius: 10px;
+    border-radius: 7px;
     
     font-size: 15px;
 }  
@@ -60,14 +60,13 @@
           margin-bottom: 5px;
  }
 
-.btn_btn {
+.btn_btn1 {
 
-    padding: 18px 200px;
-    margin-top: 30px;
-  
-  
+    padding: 20px 45px;
+    margin-top: 50px;
+    margin-left: 32rem;
     background: rgba(24, 196, 47, 0.76);
-    border-radius: 10px;
+    border-radius: 1px;
     color: rgb(29, 2, 2);
     font-size: 17px;
     font-family: "inter";
@@ -84,11 +83,16 @@
 }
 .reg{
    
-    margin-left:35rem;
+    margin-left:39rem;
     margin-top: -21.5rem;
 }
 .reg1{
-    margin-right:8rem;
+    margin-left:5rem;
     margin-top: 3rem; 
     display: inline-block;
+}
+.side{
+    margin-right:8rem;
+    margin-top: 1rem; 
+    
 }
